appointment/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>EndDateTimeBackup__c</fullName>
        <label>EndDateTimeBackup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Input here the name of the event to be displayed on the calendar.</description>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResourceId__c</fullName>
        <label>ResourceId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateTimeBackup__c</fullName>
        <label>StartDateTimeBackup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Shift_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Shift Event</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>